--- a/style.css
+++ b/style.css
@@ -67,6 +67,11 @@ nav a {
     border-radius: 15px;
     box-shadow: 0 20px 50px -12px rgba(0, 0, 0, 0.5);
     max-width: fit-content;
+    transition: transform 0.3ms;
+}
+
+.card:hover {
+    transform: translateY(-10px);
 }
   
 
@@ -92,6 +97,12 @@ nav a {
     border-radius: 15px;
     padding: 15px;
     text-align: center;
+transition: background-color 0.3s;
+}
+
+.card a:hover {
+    background-color: #1e223c;
+    color: white;
 }
 
 .card__header small {
