--- a/style.css
+++ b/style.css
@@ -40,10 +40,60 @@ ul li {
     margin: 0 5px;
 }
 
+ul li a {
+    transition: 00.1s;
+}
+
+ul li a:hover {
+    color: #8c8c8c;
+}
+
 nav a {
     display: flex;
     justify-content: end;
     color: black;
+    transition: 00.3s;
+}
+
+nav a:hover {
+    color: #8c8c8c;
+}
+
+.hero {
+    background-image: linear-gradient(90deg, #8c8c8c, #a7a7a7);
+    padding: 50px 20px;
+    color: #e2e8f0;
+}
+  
+.hero__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    align-items: center;
+}
+
+.hero__grid-content {
+    max-width: 100%;
+    background-color: rgb(223, 223, 223);
+    padding: 20px;
+    border-radius: 15px;
+}
+  
+.hero__grid-content h1 {
+    color: #fff;
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+  
+.hero__grid-content p {
+    margin-bottom: 40px;
+    color: #242424;
+}
+  
+.hero__grid-img {
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    border-radius: 10px;
 }
 
 .container {
@@ -55,19 +105,17 @@ nav a {
     color: black;
 }
 
-.titleP {
-    margin-top: 30px;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
 .card {
     background-color: rgb(223, 223, 223);
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 20px 50px -12px rgba(0, 0, 0, 0.5);
     max-width: fit-content;
-    transition: transform 0.3ms;
+    transition: transform 0.3s;
+}
+
+.card img {
+    object-fit:cover;
 }
 
 .card:hover {
@@ -97,7 +145,7 @@ nav a {
     border-radius: 15px;
     padding: 15px;
     text-align: center;
-transition: background-color 0.3s;
+    transition: background-color 0.3s;
 }
 
 .card a:hover {
@@ -132,6 +180,14 @@ transition: background-color 0.3s;
     transition: background-color 0.3s;
 }
 */
+
+.expo {
+    background-color: rgb(223, 223, 223);
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 20px 50px -12px rgba(0, 0, 0, 0.5);
+    max-width: fit-content;
+}
 
 .prop {
     display: grid;
@@ -168,11 +224,6 @@ transition: background-color 0.3s;
     display: inline;
 }
 
-/*
-.lkV2 {
-    
-}
-*/
 
 .linkAc {
     display: flex;
@@ -187,35 +238,42 @@ transition: background-color 0.3s;
     top: 10px;
 }  
 */
+.topBar {
+    align-items: center;
+}
+
 .logo {
+    border-radius: 15px;
+    box-shadow: 0 20px 50px -12px rgba(0, 0, 0, 0.5);
     position: absolute;
-    padding-top: 18px;
-    padding-left: 20px;
+    margin-top: 18px;
+    margin-left: 20px;
 }
-/*
-.topTxt {
-     position: relative;
-     left: 75px;
-     top: 15px;
+
+.logo:active {
+    box-shadow: 2px 2px 5px #242424;
 }
-*/
 
 .logoAj {
+    border-radius: 15px;
+    box-shadow: 0 20px 50px -12px rgba(0, 0, 0, 0.5);
     position: absolute;
-    padding-top: 18px;
-    padding-left: 20px;
+    margin-top: 18px;
+    margin-left: 20px;
+}
+
+.logoBp {
+    border-radius: 15px;
+    box-shadow: 0 20px 50px -12px rgba(0, 0, 0, 0.5);
+    position: absolute;
+    margin-top: 18px;
+    margin-left: 20px;
 }
 
 .linkBp {
     display: flex;
     justify-content: end;
     color: black;
-}
-
-.logoBp {
-    position: absolute;
-    padding-top: 18px;
-    padding-left: 20px;
 }
 
 .footerSep {
@@ -247,12 +305,10 @@ transition: background-color 0.3s;
     top: 20px;
 }
 
-/*.prop {
+.titleP {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content: center;
 }
-*/
 
 .form {
     display: flex;
@@ -264,19 +320,32 @@ transition: background-color 0.3s;
     max-width: fit-content;
 }
 
+.form__title {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.form__content {
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    padding: 35px;
+}
+
+.form__content label {
+    padding-bottom: 15px;
+}
+
 .conRedes {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+    padding-top: 15px;
 }
 
 @media (max-width: 540px) {
     .linkAc {
         display: none;
-}
-
-.logoAj {
-    padding-top: 8px;
 }
 }
 
@@ -340,4 +409,10 @@ transition: background-color 0.3s;
         padding-top: 8px;
     }
 
+}
+
+@media (max-width: 565px) {
+    .conRedes {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
